Integration test: the GetAllPrisonersTest